# nRF52-persistent-GATT

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  ble_cus.c  ble_cus.h  main.c
config/: app_config.h
pca10056/s140/armgcc/: Makefile
